--- a/package.json
+++ b/package.json
@@ -10,9 +10,24 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "1.9.2"
+    "@tailwindcss/forms": "^0.5.3",
+    "@typescript-eslint/parser": "^5.51.0",
+    "astro": "^2.0.4",
+    "eslint": "^8.34.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-astro": "^0.23.0",
+    "eslint-plugin-import": "^2.27.5"
   },
   "dependencies": {
-    "astro-netlify-cms": "^0.5.2"
+    "@astrojs/react": "^2.0.2",
+    "@astrojs/tailwind": "^3.0.1",
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "astro-netlify-cms": "^0.5.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "tailwindcss": "^3.0.24",
+    "yet-another-react-lightbox": "^2.3.1"
   }
 }
